--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -151,6 +151,29 @@
         &__dialog
             width: 400px
             padding: 33px 66px
+@media ( max-width: 992px ) and (orientation: landscape)
+    .modal
+        &__dialog
+            width: 70%
+            height: 320px
+        &__form
+            display: grid
+            grid-template-columns: repeat(2,1fr)
+            column-gap: 15px
+            row-gap: 15px
+        &__title
+            grid-column: 1/3
+            margin: 0
+        &__input
+            grid-column: 1/2
+            margin: 0
+        &__textarea
+            grid-column: 2/3
+            grid-row: 2/5
+            height: 100%
+            margin: 0
+        &__button-wrapper
+            grid-column: 1/3
 
 @media ( max-width:759px)
     body
@@ -356,7 +379,33 @@
             &__social
                 grid-column: 2/4
                 display: grid
-                grid-template-columns: repeat(2, 1fr)  
+                grid-template-columns: repeat(2, 1fr) 
+@media ( max-width: 759px ) and (orientation: landscape)
+    .modal
+        &__dialog
+            width: 90%
+            height: 320px
+        &__form
+            display: grid
+            grid-template-columns: repeat(2,1fr)
+            column-gap: 15px
+            row-gap: 15px
+        &__title
+            grid-column: 1/3
+            margin: 0
+        &__input
+            grid-column: 1/2
+            margin: 0
+        &__textarea
+            grid-column: 2/3
+            grid-row: 2/5
+            height: 100%
+            margin: 0
+        &__button-wrapper
+            grid-column: 1/3
+            flex-direction: row
+        &__button
+            width: 50%
 
 @media ( max-width: 619px )
     body
@@ -645,3 +694,29 @@
             margin-bottom: 15px
         &__button
             width: 100%
+@media ( max-width: 619px ) and (orientation: landscape)
+    .modal
+        &__dialog
+            width: 100%
+            height: 320px
+        &__form
+            display: grid
+            grid-template-columns: repeat(2,1fr)
+            column-gap: 15px
+            row-gap: 15px
+        &__title
+            grid-column: 1/3
+            margin: 0
+        &__input
+            grid-column: 1/2
+            margin: 0
+        &__textarea
+            grid-column: 2/3
+            grid-row: 2/5
+            height: 100%
+            margin: 0
+        &__button-wrapper
+            grid-column: 1/3
+            flex-direction: row
+        &__button
+            width: 50%
