--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -154,8 +154,9 @@
 @media ( max-width: 992px ) and (orientation: landscape)
     .modal
         &__dialog
-            width: 70%
+            width: 80%
             height: 320px
+            top: 50%
         &__form
             display: grid
             grid-template-columns: repeat(2,1fr)
@@ -385,6 +386,7 @@
         &__dialog
             width: 90%
             height: 320px
+            top: 50%
         &__form
             display: grid
             grid-template-columns: repeat(2,1fr)
@@ -699,6 +701,7 @@
         &__dialog
             width: 100%
             height: 320px
+            top: 50%
         &__form
             display: grid
             grid-template-columns: repeat(2,1fr)
