--- a/css/main.css
+++ b/css/main.css
@@ -2038,9 +2038,15 @@ body {
             column-gap: 16px;
     -ms-flex-line-pack: center;
         align-content: center;
+    margin-left: -10px;
+  }
+  .footer-top__links {
+    margin-left: -10px;
+    margin-bottom: -5px;
   }
   .footer-top__title_nm {
     width: 200px;
+    margin-bottom: -5px;
   }
   .footer-top__legal-info {
     -ms-grid-row: 2;
@@ -2417,6 +2423,9 @@ body {
     -ms-grid-columns: 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr 1fr;
   }
+  .footer-top__title_nm {
+    margin-bottom: 0;
+  }
   .footer-top__social {
     -ms-grid-column: 2;
     -ms-grid-column-span: 2;
@@ -2425,6 +2434,11 @@ body {
     display: grid;
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
+    margin-left: 0;
+  }
+  .footer-top__links {
+    margin-bottom: 0;
+    margin-left: 0;
   }
 }
 
