--- a/css/main.css
+++ b/css/main.css
@@ -2097,7 +2097,8 @@ body {
 @media (max-width: 992px) and (orientation: landscape) {
   .modal__dialog {
     width: 80%;
-    height: 320px;
+    height: 290px;
+    top: 50%;
   }
   .modal__form {
     display: -ms-grid;
@@ -2125,18 +2126,25 @@ body {
     -ms-grid-column-span: 1;
     grid-column: 2/3;
     -ms-grid-row: 2;
-    -ms-grid-row-span: 3;
-    grid-row: 2/5;
+    -ms-grid-row-span: 2;
+    grid-row: 2/4;
     height: 100%;
     margin: 0;
   }
   .modal__button-wrapper {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
   .modal__button {
-    width: 48.5%;
+    width: 100%;
+  }
+  .modal__txt {
+    display: none;
   }
 }
 
@@ -2458,7 +2466,8 @@ body {
 @media (max-width: 759px) and (orientation: landscape) {
   .modal__dialog {
     width: 90%;
-    height: 320px;
+    height: 290px;
+    top: 50%;
   }
   .modal__form {
     display: -ms-grid;
@@ -2486,22 +2495,25 @@ body {
     -ms-grid-column-span: 1;
     grid-column: 2/3;
     -ms-grid-row: 2;
-    -ms-grid-row-span: 3;
-    grid-row: 2/5;
+    -ms-grid-row-span: 2;
+    grid-row: 2/4;
     height: 100%;
     margin: 0;
   }
   .modal__button-wrapper {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
   }
   .modal__button {
-    width: 48.5%;
+    width: 100%;
+  }
+  .modal__txt {
+    display: none;
   }
 }
 
@@ -2947,7 +2959,7 @@ body {
             justify-content: start;
   }
   .modal__dialog {
-    width: 100%;
+    width: 95%;
     padding: 33px 33px;
   }
   .modal__button-wrapper {
@@ -2970,7 +2982,7 @@ body {
 @media (max-width: 619px) and (orientation: landscape) {
   .modal__dialog {
     width: 100%;
-    height: 320px;
+    height: 290px;
     top: 50%;
   }
   .modal__form {
@@ -2999,22 +3011,25 @@ body {
     -ms-grid-column-span: 1;
     grid-column: 2/3;
     -ms-grid-row: 2;
-    -ms-grid-row-span: 3;
-    grid-row: 2/5;
+    -ms-grid-row-span: 2;
+    grid-row: 2/4;
     height: 100%;
     margin: 0;
   }
   .modal__button-wrapper {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
   }
   .modal__button {
-    width: 48.5%;
+    width: 100%;
+  }
+  .modal__txt {
+    display: none;
   }
 }
 /*# sourceMappingURL=main.css.map */
