--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -160,7 +160,8 @@
     .modal
         &__dialog
             width: 80%
-            height: 320px
+            height: 290px
+            top: 50%
         &__form
             display: grid
             grid-template-columns: repeat(2,1fr)
@@ -174,13 +175,16 @@
             margin: 0
         &__textarea
             grid-column: 2/3
-            grid-row: 2/5
+            grid-row: 2/4
             height: 100%
             margin: 0
         &__button-wrapper
-            grid-column: 1/3
+            grid-column: 2/3
+            flex-direction: row
         &__button
-            width: 48.5%
+            width: 100%
+        &__txt
+            display: none
 
 @media ( max-width:759px)
     body
@@ -398,7 +402,8 @@
     .modal
         &__dialog
             width: 90%
-            height: 320px
+            height: 290px
+            top: 50%
         &__form
             display: grid
             grid-template-columns: repeat(2,1fr)
@@ -412,14 +417,16 @@
             margin: 0
         &__textarea
             grid-column: 2/3
-            grid-row: 2/5
+            grid-row: 2/4
             height: 100%
             margin: 0
         &__button-wrapper
-            grid-column: 1/3
+            grid-column: 2/3
             flex-direction: row
         &__button
-            width: 48.5%
+            width: 100%
+        &__txt
+            display: none
 
 @media ( max-width: 619px )
     body
@@ -699,7 +706,7 @@
                 justify-content: start
     .modal
         &__dialog
-            width: 100%
+            width: 95%
             padding: 33px 33px
         &__button-wrapper
             flex-direction: column-reverse
@@ -712,7 +719,7 @@
     .modal
         &__dialog
             width: 100%
-            height: 320px
+            height: 290px
             top: 50%
         &__form
             display: grid
@@ -727,11 +734,13 @@
             margin: 0
         &__textarea
             grid-column: 2/3
-            grid-row: 2/5
+            grid-row: 2/4
             height: 100%
             margin: 0
         &__button-wrapper
-            grid-column: 1/3
+            grid-column: 2/3
             flex-direction: row
         &__button
-            width: 48.5%
+            width: 100%
+        &__txt
+            display: none
