--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -192,6 +192,9 @@
             height: 210px
             border-radius: 10px
             overflow: hidden
+            background-image: url(../img/2.hotel/map.jpg)
+            background-repeat: no-repeat
+            background-size: cover
             &__item
                 width: 100%
                 height: 100%
