--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -631,6 +631,18 @@
             max-width: 100%
             height: 179px
             margin-bottom: 20px
+        &-slider
+            &__button
+                width: 12px
+                height: 12px
+                &_prev
+                    left: 9px
+                &_next
+                    right: 9px
+            &__icon
+                &_prev, &_next
+                    width: 4px
+                    height: 7px
         &-wrapper
             flex-direction: column
             .booking-card
