--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -11,6 +11,8 @@
             grid-row: 1/3
             display: flex
             align-items: center
+        &__logo
+            margin-bottom: -20px
         &__categories
             grid-row: 1/3
         &__additional-info
